# SlaveTatsNG

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  deploy.bat  distro-se.bat  distro.bat  vcpkg-configuration.json  vcpkg.json
cmake/: headerlist.cmake  sourcelist.cmake  x64-windows-skse.cmake
config/: SlaveTatsNG.ini  skee_addresses.json
include/: SlaveTatsNG_Interface.h  cache.h  config.h  constants.h  high_level_api.h  jcontainers_wrapper.h  logging.h  mod_events.h  ni_node_override_lock.h  nioverride_impl.h  nioverride_impl_current.h  nioverride_impl_legacy.h  nioverride_impl_old.h  nioverride_wrapper.h  overlays.h  papyrus_cache.h  papyrus_constants.h  papyrus_high_level_api.h  papyrus_interface.h  papyrus_logging.h  papyrus_overlays.h  papyrus_primary_api.h  papyrus_query.h  papyrus_tattoo.h  papyrus_tattoo_magic.h  primary_api.h  query.h  skee_addresses.h  skse64_native_papyrus.h  tattoo.h  tattoo_magic.h  threading.h  util.h  utility.h  vm_hook.h
include/skee-modders-resource-v0-4-19-16/: SKEE_IPluginInterface.h
mods/MinStaminaRateMultTest/: MinStaminaRateMult.esp
mods/MinStaminaRateMultTest/Scripts/Source/: MinStaminaRateMult_Effect.psc  minstaminaratemult.psc
mods/ModEventTest/: ModEventTest.esp
mods/ModEventTest/Scripts/Source/: ModEventTestQuest_Script.psc  ModEventTest_PlayerRefScript.psc
papyrus/: skyrimse.ppj
papyrus/Scripts/Source/: NiNodeOverrideLock.psc  NiOverrideCleanScript.psc  SlaveTatsNG.psc
papyrus/Source/Scripts/: SlaveTats.psc  SlaveTatsMCMMenu.psc  SlaveTatsOnLoad.psc  SlaveTatsWatchCell.psc
src/: PCH.h  SlaveTatsNG_Interface.cpp  cache.cpp  config.cpp  constants.cpp  high_level_api.cpp  jcontainers_wrapper.cpp  logging.cpp  main.cpp  mod_events.cpp  ni_node_override_lock.cpp  nioverride_impl_legacy.cpp  nioverride_wrapper.cpp  overlays.cpp  papyrus_cache.cpp  papyrus_constants.cpp  papyrus_high_level_api.cpp  papyrus_interface.cpp  papyrus_logging.cpp  papyrus_overlays.cpp  papyrus_primary_api.cpp  papyrus_query.cpp  papyrus_tattoo.cpp  papyrus_tattoo_magic.cpp  primary_api.cpp  query.cpp  skee_addresses.cpp  skse64_native_papyrus.cpp  tattoo.cpp  tattoo_magic.cpp  utility.cpp  vm_hook.cpp
